update packages, and metro to 2.0

--- a/SpellGUIV2/App.xaml
+++ b/SpellGUIV2/App.xaml
@@ -8,13 +8,15 @@
             <ResourceDictionary.MergedDictionaries>
                 <!-- Use the enUS.xaml as the default.-->
                 <ResourceDictionary Source="pack://SiteOfOrigin:,,,/Languages/enUS.xaml"/>
+                
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
+                
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Blue.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="TabControl" 
+               BasedOn="{StaticResource MahApps.Styles.TabControl.AnimatedSingleRow}" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
