git commit suicide

--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -51,14 +51,18 @@
     <system:String x:Key="labCastTime">Cast Time:</system:String>
     <system:String x:Key="labDuration">Duration:</system:String>
     <system:String x:Key="labRange">Range:</system:String>
-    <system:String x:Key="labCasterAuraState">Caster Aura State:</system:String>
     <system:String x:Key="labSpellLevel">Spell Level:</system:String>
     <system:String x:Key="labBaseLevel">Base Level:</system:String>
     <system:String x:Key="labMaxLevel">Max Level:</system:String>
     <system:String x:Key="labSpellVisual1">Spell Visual 1:</system:String>
     <system:String x:Key="labSpellVisual2">Spell Visual 2:</system:String>
     <system:String x:Key="labSpeed">Speed:</system:String>
+
+    <system:String x:Key="labCasterAuraState">Caster Aura State:</system:String>
     <system:String x:Key="labTargetAuraState">Target Aura State:</system:String>
+    <system:String x:Key="labCasterAuraStateNot">Caster Aura State Not:</system:String>
+    <system:String x:Key="labTargetAuraStateNot">Target Aura State Not:</system:String>
+    
     <system:String x:Key="labRecoveryTime">Recovery Time:</system:String>
     <system:String x:Key="labCategoryRecoveryTime">Category Recovery Time:</system:String>
     <system:String x:Key="labSpellMissileID">Spell Missile ID:</system:String>
@@ -84,6 +88,15 @@
     <system:String x:Key="labPreventionType">Prevention Type:</system:String>
     <system:String x:Key="labSpellDamageType">Spell Damage Type:</system:String>
     <system:String x:Key="labRequiresSpellFocus">Requires Spell Focus:</system:String>
+
+    <system:String x:Key="labCasterAuraSpell">Caster Aura Spell:</system:String>
+    <system:String x:Key="labTargetAuraSpell">Target Aura Spell:</system:String>
+    <system:String x:Key="labExcludeCasterAuraSpell">Exclude Caster Aura Spell:</system:String>
+    <system:String x:Key="labExcludeTargetAuraSpell">Exclude Target Aura Spell:</system:String>
+
+    <system:String x:Key="labStanceBarOrder">Stance Bar Order:</system:String>
+    <system:String x:Key="labPowerDisplayId">Power Display Id:</system:String>
+
     <system:String x:Key="labRuneCost">Rune Cost:</system:String>
     <system:String x:Key="labSpellDescriptionVariables">Spell Description Variables:</system:String>
 	<system:String x:Key="labSpellPriority">Spell Priority:</system:String>
@@ -162,6 +175,7 @@
     <system:String x:Key="labAttributesEx7">Attributes Ex7:</system:String>
     <system:String x:Key="labCreatureType">Creature Type:</system:String>
     <system:String x:Key="labStances">Stances:</system:String>
+    <system:String x:Key="labStancesNot">Excluded Stances:</system:String>
     <system:String x:Key="labCurrentIcon">Current Icon:</system:String>
     <system:String x:Key="labNewIcon">New Icon:</system:String>
     <system:String x:Key="labFiltericons">Filter icons:</system:String>
@@ -175,10 +189,16 @@
     <system:String x:Key="butImportExportWindowImport">Import</system:String>
     <system:String x:Key="butImportExportWindowExport">Export</system:String>
     <system:String x:Key="ImportExportWindowTitle">Import and Export</system:String>
-	<system:String x:Key="butLogBook">Log Book</system:String>
+    <system:String x:Key="butLogBook">Log Book</system:String>
 	<system:String x:Key="butConfig">Config</system:String>
 	<system:String x:Key="ConfigWindowTitle">Configuration Editor</system:String>
     <system:String x:Key="butMultilingualSwitch">Multilingual</system:String>
+
+    <system:String x:Key="resetEffects">Reset Effect</system:String>
+    <system:String x:Key="copyEffect1">Copy Effect 1</system:String>
+    <system:String x:Key="copyEffect2">Copy Effect 2</system:String>
+    <system:String x:Key="copyEffect3">Copy Effect 3</system:String>
+
     <!--#endregion-->
 
     <!--#region code string-->
@@ -660,31 +680,45 @@
         Non-combat Pet |
         Gas Cloud
     </system:String>
-    <system:String x:Key="aura_state_strings">
+    <system:String x:Key="caster_aura_state_strings">
         None |
         Defense |
-        Healthless 20 Percent |
+        Healthless 20% |
         Berserking |
-        Frozen |
         Judgement |
-        Unknown6 |
         Hunter Parry |
-        Unknown8 |
-        Unknown9 |
-        Warrior Victory Rush |
-        Unknown11 |
-        Faerie Fire |
-        Healthless 35 Percent |
+        Victory Rush |
+        Unknown 11 |
+        Healthless 35% |
+        Enrage |
+        Unknown 22 |
+        Health Above 75%
+    </system:String>
+    <system:String x:Key="target_aura_state_strings">
+        None |
+        Healthless 20% |    
+        Berserking |
+        Healthless 35% |
         Conflagrate |
         Swiftmend |
         Deadly Poison |
-        Enrage |
-        Bleeding |
-        Parry |
-        Unknown20 |
-        Unknown21 |
-        Unknown22 |
-        Health Above 75 Percent
+        Bleeding
+    </system:String>
+    <system:String x:Key="caster_aura_state_strings_not">
+        None |
+        Healthless 20% |
+        Frozen |
+        Unknown 7 |
+        Faerie Fire |
+        Unknown 20
+    </system:String>
+    <system:String x:Key="target_aura_state_strings_not">
+        None |
+        Frozen |
+        Unknown 8 |
+        Unknown 11 |
+        Faerie Fire |
+        Unknown 22
     </system:String>
     <system:String x:Key="equipped_item_inventory_type_mask_strings">
         Non-Equip |
