--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -51,14 +51,18 @@
     <system:String x:Key="labCastTime">Temps d'incantation :</system:String>
     <system:String x:Key="labDuration">Durée :</system:String>
     <system:String x:Key="labRange">Portée :</system:String>
-    <system:String x:Key="labCasterAuraState">Statut du lanceur :</system:String>
     <system:String x:Key="labSpellLevel">Niveau du sort :</system:String>
     <system:String x:Key="labBaseLevel">Niveau de base du sort :</system:String>
     <system:String x:Key="labMaxLevel">Niveau Max :</system:String>
     <system:String x:Key="labSpellVisual1">Visuel 1 :</system:String>
     <system:String x:Key="labSpellVisual2">Visuel 2 :</system:String>
     <system:String x:Key="labSpeed">Vélocité :</system:String>
+
     <system:String x:Key="labTargetAuraState">Statut de la cible :</system:String>
+	<system:String x:Key="labCasterAuraState">Statut du lanceur :</system:String>
+	<system:String x:Key="labCasterAuraStateNot">Statut du lanceur non :</system:String>
+	<system:String x:Key="labTargetAuraStateNot">Statut de la cible non :</system:String>
+
     <system:String x:Key="labRecoveryTime">Temps de recharge :</system:String>
     <system:String x:Key="labCategoryRecoveryTime">Temps de recharge de la catégorie :</system:String>
     <system:String x:Key="labSpellMissileID">ID du Missile:</system:String>
@@ -84,6 +88,15 @@
     <system:String x:Key="labPreventionType">Type de prévention :</system:String>
     <system:String x:Key="labSpellDamageType">Type de dégâts :</system:String>
     <system:String x:Key="labRequiresSpellFocus">Requiert le Focus :</system:String>
+
+	<system:String x:Key="labCasterAuraSpell">Sort d’aura du lanceur :</system:String>
+    <system:String x:Key="labTargetAuraSpell">Sort d’aura de la cible :</system:String>
+    <system:String x:Key="labExcludeCasterAuraSpell">Exclure le sort d’aura du lanceur :</system:String>
+    <system:String x:Key="labExcludeTargetAuraSpell">Exclure le sort d’aura du lanceur :</system:String>
+
+    <system:String x:Key="labStanceBarOrder">Ordre de la barre de posture :</system:String>
+    <system:String x:Key="labPowerDisplayId">ID d’affichage de la ressource :</system:String>
+
     <system:String x:Key="labRuneCost">Coût runique:</system:String>
     <system:String x:Key="labSpellDescriptionVariables">Variables de la description :</system:String>
 	<system:String x:Key="labSpellPriority">Spell Priority:</system:String>
@@ -162,6 +175,7 @@
     <system:String x:Key="labAttributesEx7">Attributs Ex7 :</system:String>
     <system:String x:Key="labCreatureType">Type de créature :</system:String>
     <system:String x:Key="labStances">Postures :</system:String>
+	<system:String x:Key="labStancesNot">Exclure Postures:</system:String>
     <system:String x:Key="labCurrentIcon">Icône actuelle :</system:String>
     <system:String x:Key="labNewIcon">Nouvelle icône :</system:String>
     <system:String x:Key="labFiltericons">Filtre d'icônes :</system:String>
@@ -177,6 +191,12 @@
     <system:String x:Key="ImportExportWindowTitle">Importer et exporter</system:String>
 	<system:String x:Key="butLogBook">Log Book</system:String>
     <system:String x:Key="butMultilingualSwitch">Multilingue</system:String>
+
+	<system:String x:Key="resetEffects">Réinit. effet</system:String>
+    <system:String x:Key="copyEffect1">Copier l’effet 1</system:String>
+    <system:String x:Key="copyEffect2">Copier l’effet 2</system:String>
+    <system:String x:Key="copyEffect3">Copier l’effet 3</system:String>
+
     <!--#endregion-->
 
     <!--#region code string-->
@@ -660,31 +680,45 @@
 		Familier non combattant |
 		Nuage de gaz
     </system:String>
-    <system:String x:Key="aura_state_strings">
-        None |
-        Defense |
-        Healthless 20 Percent |
-        Berserking |
-        Frozen |
-        Judgement |
-        Unknown6 |
-        Hunter Parry |
-        Unknown8 |
-        Unknown9 |
-        Warrior Victory Rush |
-        Unknown11 |
-        Faerie Fire |
-        Healthless 35 Percent |
-        Conflagrate |
-        Swiftmend |
-        Deadly Poison |
-        Enrage |
-        Bleeding |
-        Parry |
-        Unknown20 |
-        Unknown21 |
-        Unknown22 |
-        Health Above 75 Percent
+    <system:String x:Key="caster_aura_state_strings">
+        Aucun |
+    	Défense |
+    	Sans santé 20% |
+    	Berseking |
+    	Jugement |
+    	Parade du lanceur |
+    	Victoire imminente |
+    	Inconnu 11 |
+    	Sans santé 35% |
+    	Enragé |
+    	Inconnu 22 |
+    	Santé au-dessus de 75%
+    </system:String>
+    <system:String x:Key="target_aura_state_strings">
+        Aucun |
+    	Sans santé 20% |
+    	Berseking |
+    	Sans santé 35% |
+    	Conflagration |
+    	Rétablissement rapide |
+    	Poison mortel |
+    	Saignement
+    </system:String>
+    <system:String x:Key="caster_aura_state_strings_not">
+        Aucun |
+    	Sans santé 20% |
+    	Gelé |
+    	Inconnu 7 |
+    	Feu stellaire |
+    	Inconnu 20
+    </system:String>
+    <system:String x:Key="target_aura_state_strings_not">
+        Aucun |
+   		Gelé |
+   		Inconnu 8 |
+   		Inconnu 11 |
+   		Feu stellaire |
+   		Inconnu 22
     </system:String>
     <system:String x:Key="equipped_item_inventory_type_mask_strings">
 		Non-équipé |
